--- a/app/views/staff/transaction_uploads/update.html.haml
+++ b/app/views/staff/transaction_uploads/update.html.haml
@@ -1,11 +1,11 @@
-= content_for :page_title_prefix, t("page_title.transaction.upload")
+= content_for :page_title_prefix, t("page_title.actual.upload")
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     - if @success == false
       .govuk-grid-column-two-thirds
         %h1.govuk-heading-xl
-          = t("page_title.transaction.upload")
+          = t("page_title.actual.upload")
 
       .govuk-grid-row
         .govuk-grid-column-full
@@ -15,7 +15,7 @@
     - else
       .govuk-grid-column-full
         %h1.govuk-heading-xl
-          = t("page_title.transaction.upload_success")
+          = t("page_title.actual.upload_success")
 
         = render partial: "shared/transactions/transactions_by_activity"
-        = link_to t("importer.success.transaction.back_link"), report_actuals_path(@report_presenter), class: "govuk-button govuk-button"
+        = link_to t("importer.success.actual.back_link"), report_actuals_path(@report_presenter), class: "govuk-button govuk-button"
