--- a/app/views/staff/shared/activities/_transactions.html.haml
+++ b/app/views/staff/shared/activities/_transactions.html.haml
@@ -1,7 +1,7 @@
 .govuk-grid-row
   .govuk-grid-column-full
     %h2.govuk-heading-m
-      = t("page_content.activity.transactions")
+      = t("page_content.activity.actuals")
     - if policy(activity).edit?
-      = link_to(t("page_content.transactions.button.create"), new_activity_transaction_path(activity), class: "govuk-button")
+      = link_to(t("page_content.actuals.button.create"), new_activity_transaction_path(activity), class: "govuk-button")
     = render partial: '/staff/shared/transactions/table', locals: { transactions: transaction_presenters }
