--- a/app/views/staff/shared/transactions/_table.html.haml
+++ b/app/views/staff/shared/transactions/_table.html.haml
@@ -1,21 +1,21 @@
 - unless transactions.empty?
-  %table.govuk-table.transactions
+  %table.govuk-table.actuals
     %thead.govuk-table__head
       %tr.govuk-table__row
         %th.govuk-table__header
-          = t("table.header.transaction.financial_quarter")
+          = t("table.header.actual.financial_quarter")
         %th.govuk-table__header
-          = t("table.header.transaction.value")
+          = t("table.header.actual.value")
         %th.govuk-table__header
-          = t("table.header.transaction.receiving_organisation")
+          = t("table.header.actual.receiving_organisation")
         %th.govuk-table__header
 
     %tbody.govuk-table__body
-      - transactions.each do |transaction|
-        %tr.govuk-table__row{id: transaction.id}
-          %td.govuk-table__cell= transaction.financial_quarter_and_year
-          %td.govuk-table__cell= transaction.value
-          %td.govuk-table__cell= transaction.receiving_organisation_name
+      - transactions.each do |actual|
+        %tr.govuk-table__row{id: actual.id}
+          %td.govuk-table__cell= actual.financial_quarter_and_year
+          %td.govuk-table__cell= actual.value
+          %td.govuk-table__cell= actual.receiving_organisation_name
           %td.govuk-table__cell
-            - if policy(transaction).edit?
-              = a11y_action_link(t('default.link.edit'), edit_activity_transaction_path(transaction.parent_activity_id, transaction), t("page_content.transactions.edit_noun"))
+            - if policy(actual).edit?
+              = a11y_action_link(t('default.link.edit'), edit_activity_transaction_path(actual.parent_activity_id, actual), t("page_content.actuals.edit_noun"))
