--- a/app/views/staff/transaction_uploads/new.html.haml
+++ b/app/views/staff/transaction_uploads/new.html.haml
@@ -1,12 +1,12 @@
-= content_for :page_title_prefix, t("page_title.transaction.upload")
+= content_for :page_title_prefix, t("page_title.actual.upload")
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h1.govuk-heading-xl
-        = t("page_title.transaction.upload")
+        = t("page_title.actual.upload")
 
-      = t("page_content.transactions.upload.copy_html", report_actuals_template_path: report_transaction_upload_path(@report_presenter, format: :csv))
+      = t("page_content.actuals.upload.copy_html", report_actuals_template_path: report_transaction_upload_path(@report_presenter, format: :csv))
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
@@ -15,12 +15,12 @@
           = form_for @report_presenter, url: report_transaction_upload_path(@report_presenter) do |f|
 
             = f.govuk_file_field :transaction_csv,
-              label: { text: t("form.label.transaction.csv_file") },
-              hint: { text: t("form.hint.transaction.csv_file") }
+              label: { text: t("form.label.actual.csv_file") },
+              hint: { text: t("form.hint.actual.csv_file") }
 
-            = f.govuk_submit t("action.transaction.upload.button")
+            = f.govuk_submit t("action.actual.upload.button")
       - else
-        %h2.govuk-heading-m= t("form.label.transaction.csv_file")
+        %h2.govuk-heading-m= t("form.label.actual.csv_file")
 
         %p.govuk-body
           = "This report is #{@report_presenter.state.downcase}, so CSV upload is unavailable."
