--- a/app/views/staff/transactions/_form.html.haml
+++ b/app/views/staff/transactions/_form.html.haml
@@ -18,8 +18,8 @@
         :name,
         label: { text: "Financial year", tag: :h2, size: "m" }
 
-= f.govuk_fieldset legend: { text: t("form.legend.transaction.receiving_organisation") } do
-  %span.govuk-hint= t("form.hint.transaction.receiving_organisation")
+= f.govuk_fieldset legend: { text: t("form.legend.actual.receiving_organisation") } do
+  %span.govuk-hint= t("form.hint.actual.receiving_organisation")
   = f.govuk_text_field :receiving_organisation_name
 
   = f.govuk_collection_select :receiving_organisation_type,
@@ -34,4 +34,4 @@
 - if action_name == "new"
   = link_to t("form.link.activity.back"), organisation_activity_path(@activity.organisation, @activity), class: "govuk-button govuk-button--secondary", "data-module": "govuk-button", role: "button"
 - if action_name == "edit"
-  = link_to t("default.button.delete"), activity_transaction_path(@activity, @transaction), method: "delete" , class: "govuk-button govuk-button--warning", "data-module": "govuk-button", role: "button", data: { confirm: "Are you sure you want to delete this transaction?" }
+  = link_to t("default.button.delete"), activity_transaction_path(@activity, @actual), method: "delete" , class: "govuk-button govuk-button--warning", "data-module": "govuk-button", role: "button", data: { confirm: "Are you sure you want to delete this transaction?" }
