--- a/app/views/staff/transactions/edit.html.haml
+++ b/app/views/staff/transactions/edit.html.haml
@@ -1,10 +1,10 @@
-=content_for :page_title_prefix, t("page_title.transaction.edit")
+=content_for :page_title_prefix, t("page_title.actual.edit")
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       %h1.govuk-heading-xl
-        = t("page_title.transaction.edit")
+        = t("page_title.actual.edit")
 
-      = form_with model: @transaction, url: activity_transaction_path(@activity) do |f|
+      = form_with model: @actual, url: activity_transaction_path(@activity) do |f|
         = render partial: "form", locals: { f: f, organisations: @organisations }
