--- a/app/views/staff/reports/_tab_list.html.haml
+++ b/app/views/staff/reports/_tab_list.html.haml
@@ -2,6 +2,6 @@
   = render partial: "staff/reports/tab", locals: { name: "summary", path: report_path(@report), active_tab: active_tab }
   = render partial: "staff/reports/tab", locals: { name: "activities", path: report_activities_path(@report), active_tab: active_tab }
   = render partial: "staff/reports/tab", locals: { name: "forecasts", path: report_forecasts_path(@report), active_tab: active_tab }
-  = render partial: "staff/reports/tab", locals: { name: "transactions", path: report_actuals_path(@report), active_tab: active_tab }
+  = render partial: "staff/reports/tab", locals: { name: "actuals", path: report_actuals_path(@report), active_tab: active_tab }
   = render partial: "staff/reports/tab", locals: { name: "variance", path: report_variance_path(@report), active_tab: active_tab }
   = render partial: "staff/reports/tab", locals: { name: "budgets", path: report_budgets_path(@report), active_tab: active_tab }
