--- a/app/views/staff/reports/actuals.html.haml
+++ b/app/views/staff/reports/actuals.html.haml
@@ -1,4 +1,4 @@
-=content_for :page_title_prefix, t("page_title.report.transactions",report_description: @report_presenter.description, report_financial_quarter: @report_presenter.financial_quarter_and_year)
+=content_for :page_title_prefix, t("page_title.report.actuals",report_description: @report_presenter.description, report_financial_quarter: @report_presenter.financial_quarter_and_year)
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
 
@@ -10,7 +10,7 @@
         %h2.govuk-tabs__title
           Contents
 
-        = render partial: "staff/reports/tab_list", locals: { active_tab: "transactions" }
+        = render partial: "staff/reports/tab_list", locals: { active_tab: "actuals" }
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
