Transaction upload now uses 'actual' widely
And references to transactions are generally replaced,
except in class names -- that will follow...

--- a/app/views/staff/reports/show.html.haml
+++ b/app/views/staff/reports/show.html.haml
@@ -34,7 +34,7 @@
                   %dt.govuk-summary-list__key
                     = t("page_content.tab_content.summary.actuals_total")
                   %dd.govuk-summary-list__value
-                    = @report_presenter.summed_transactions
+                    = @report_presenter.summed_actuals
                 .govuk-summary-list__row
                   %dt.govuk-summary-list__key
                     = t("page_content.tab_content.summary.forecasts_total")
