--- a/app/views/shared/transactions/_transactions_by_activity.html.haml
+++ b/app/views/shared/transactions/_transactions_by_activity.html.haml
@@ -1,4 +1,4 @@
-%table.govuk-table#transactions
+%table.govuk-table#actuals
   %caption.govuk-table__caption.govuk-table__caption--m
     = t("table.caption.actual.actuals_in_report")
   %thead.govuk-table__head
@@ -8,7 +8,7 @@
       %th.govuk-table__header{class: "govuk-!-width-one-third", scope: "col"} Actual spend
   %tbody.govuk-table__body
 
-    - @grouped_transactions.each do |activity, transactions|
+    - @grouped_actuals.each do |activity, actuals|
 
       %tr.govuk-table__row{ id: "activity_transactions_#{activity.id}" }
         %td.govuk-table__cell{class: "govuk-!-width-one-third"}
@@ -17,15 +17,15 @@
           = activity.roda_identifier
         %td.govuk-table__cell{class: "govuk-!-width-one-third"}
           %table.govuk-table.transactions
-            - transactions.each do |transaction|
+            - actuals.each do |actual|
               %tr.govuk-table__row
                 %td.govuk-table__cell--numeric{class: "govuk-!-width-one-half", scope: "col"}
-                  = transaction.financial_quarter_and_year
+                  = actual.financial_quarter_and_year
                 %td.govuk-table__cell--numeric{class: "govuk-!-width-one-half", scope: "col"}
-                  = transaction.value
+                  = actual.value
 
     %tr.govuk-table__row.totals
       %td.govuk-table__cell Total
       %td.govuk-table__cell
       %td.govuk-table__cell.govuk-table__cell--numeric
-        = @total_transaction
+        = @total_actuals
