Change internal references to 'actual'

--- a/app/views/pages/privacy_policy.html.haml
+++ b/app/views/pages/privacy_policy.html.haml
@@ -15,7 +15,7 @@
       %h2.govuk-heading-m
         What data we collect
       %p.govuk-body
-        This service collects non-personal data about how your organisation spends official development assistance (ODA) money. This includes the aims and objectives, budgets, progress  and transactions of the programmes and projects that you deliver
+        This service collects non-personal data about how your organisation spends official development assistance (ODA) money. This includes the aims and objectives, budgets, progress  and actual spend of the programmes and projects that you deliver
 
       %p.govuk-body
         We collect this data from you in order to meet BEIS’ transparency objectives; to do this we will publish your data openly under an Open Government Licence v3.0.
