Rename internal transactions naming in views

--- a/app/views/shared/transactions/_transactions_by_activity.html.haml
+++ b/app/views/shared/transactions/_transactions_by_activity.html.haml
@@ -10,7 +10,7 @@
 
     - @grouped_actuals.each do |activity, actuals|
 
-      %tr.govuk-table__row{ id: "activity_transactions_#{activity.id}" }
+      %tr.govuk-table__row{ id: "activity_actuals_#{activity.id}" }
         %td.govuk-table__cell{class: "govuk-!-width-one-third"}
           = activity.title
         %td.govuk-table__cell{class: "govuk-!-width-one-third"}
