--- a/app/views/staff/actuals/edit.html.haml
+++ b/app/views/staff/actuals/edit.html.haml
@@ -6,5 +6,5 @@
       %h1.govuk-heading-xl
         = t("page_title.actual.edit")
 
-      = form_with model: @actual, url: activity_transaction_path(@activity) do |f|
+      = form_with model: @actual, url: activity_actual_path(@activity) do |f|
         = render partial: "form", locals: { f: f, organisations: @organisations }
