Rename transaction partials

--- a/app/views/shared/actuals/_actuals_by_activity.html.haml
+++ b/app/views/shared/actuals/_actuals_by_activity.html.haml
@@ -16,7 +16,7 @@
         %td.govuk-table__cell{class: "govuk-!-width-one-third"}
           = activity.roda_identifier
         %td.govuk-table__cell{class: "govuk-!-width-one-third"}
-          %table.govuk-table.transactions
+          %table.govuk-table.actuals
             - actuals.each do |actual|
               %tr.govuk-table__row
                 %td.govuk-table__cell--numeric{class: "govuk-!-width-one-half", scope: "col"}
