--- a/app/views/staff/refunds/_form.html.haml
+++ b/app/views/staff/refunds/_form.html.haml
@@ -1,6 +1,7 @@
 = f.govuk_error_summary
 
-= f.govuk_text_field :value
+= f.govuk_text_field :value,
+  label: { text: t("form.label.refund.value"), tag: :p, size: 's' }
 
 = f.govuk_fieldset legend: { text: t("form.label.refund.financial_quarter") } do
   .govuk-grid-row
@@ -16,7 +17,9 @@
         list_of_financial_years(FinancialYear.previous_ten),
         :id,
         :name,
-        label: { text: t("form.label.refund.financial_year"), tag: :p, size: 's' }
+        label: { text: t("form.label.refund.financial_year"), tag: :p, size: 's' },
+        options: { include_blank: true }
 
-= f.govuk_text_area :comment
+= f.govuk_text_area :comment,
+  hint: { text: t("form.hint.refund.comment") }
 
