Refund amount is always stored as a negative value
Calculation of total Actual, incl refund and
positive adjustment:
---

```
Actual      £30,000
Refund     -£10,000
Adjustment   £5,000
-------------------
TOTAL       £25,000

```

Calculation of total Actual, incl refund and
negative adjustment:
---

```
Actual      £30,000
Refund     -£10,000
Adjustment  -£5,000
-------------------
TOTAL       £15,000

```

In all cases we sum the transactions.

This is the default approach. If we need to breakout refunds
separately and exclude them from a presentation of "total
actual", we can do this using the scopes we have on `Transaction`
through our STI classes e.g. as:

```
Actual.total + Adjustment.total
```

--- a/app/views/staff/refunds/_form.html.haml
+++ b/app/views/staff/refunds/_form.html.haml
@@ -1,7 +1,8 @@
 = f.govuk_error_summary
 
 = f.govuk_text_field :value,
-  label: { text: t("form.label.refund.value"), tag: :p, size: 's' }
+  label: { text: t("form.label.refund.value"), tag: :p, size: 's' },
+  hint: { text: t("form.hint.refund.value") }
 
 = f.govuk_fieldset legend: { text: t("form.label.refund.financial_quarter") } do
   .govuk-grid-row
