All users can export spending breakdown
Here we allow both BEIS and delivery partner users to export spending
breakdown per organisation.

For BEIS users any organisation, for delivery partners, only their own.

--- a/app/views/staff/exports/organisations/show.html.haml
+++ b/app/views/staff/exports/organisations/show.html.haml
@@ -25,6 +25,10 @@
             %th.govuk-table__header{colspan: 3, scope: "colgroup"}= t("table.export.subheading.budgets")
             - Fund.all.each do |fund|
               = render partial: "row", locals: { report: "#{fund.name} budgets", format: "CSV", download_url: budgets_exports_organisation_path(@organisation, fund_id: fund.id, format: "csv") }
+          - if policy([:export, @organisation]).show_spending_breakdown?
+            %th.govuk-table__header{colspan: 3, scope: "colgroup"}= t("table.export.subheading.spending_breakdown")
+            - Fund.all.each do |fund|
+              = render partial: "row", locals: { report: "#{fund.name} spending breakdown", format: "CSV", download_url: spending_breakdown_exports_organisation_path(@organisation, fund_id: fund.id, format: "csv") }
           - if policy([:export, @organisation]).show_xml?
             %th.govuk-table__header{colspan: 3, scope: "colgroup"}= t("table.export.subheading.iati")
             - @xml_downloads.each do |download|
