List comments grouped by activity
This adds a new tab to the reports page, which
lists the comments made in a reporting period,
grouped in a table by the activity they belong
to.

--- a/app/views/staff/reports/_tab_list.html.haml
+++ b/app/views/staff/reports/_tab_list.html.haml
@@ -5,3 +5,4 @@
   = render partial: "staff/reports/tab", locals: { name: "actuals", path: report_actuals_path(@report), active_tab: active_tab }
   = render partial: "staff/reports/tab", locals: { name: "variance", path: report_variance_path(@report), active_tab: active_tab }
   = render partial: "staff/reports/tab", locals: { name: "budgets", path: report_budgets_path(@report), active_tab: active_tab }
+  = render partial: "staff/reports/tab", locals: { name: "comments", path: report_comments_path(@report), active_tab: active_tab }
