Refactor report tabs locales
We want to store both a tab heading and any body copy in the locales,
rather than having the body in the view.

Here we prepare for this by allowing the tabs to have a 'heading'

--- a/app/views/staff/reports/activities.html.haml
+++ b/app/views/staff/reports/activities.html.haml
@@ -14,7 +14,7 @@
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
-            = t("tabs.report.activities")
+            = t("tabs.report.activities.heading")
 
           - if policy(@report_presenter).upload?
             %h3.govuk-heading-m
