--- a/app/views/staff/reports/budgets.html.haml
+++ b/app/views/staff/reports/budgets.html.haml
@@ -14,7 +14,7 @@
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
-            = t("tabs.report.budgets")
+            = t("tabs.report.budgets.heading")
 
           %p.govuk-body
             This page shows all the budgets you have added during this reporting cycle.
