--- a/app/views/staff/reports/_tab.html.haml
+++ b/app/views/staff/reports/_tab.html.haml
@@ -1,4 +1,4 @@
 %li{class: "govuk-tabs__list-item #{ "govuk-tabs__list-item--selected" if active_tab == name }", role: "presentation"}
-  = link_to t("tabs.report.#{name}"),
+  = link_to t("tabs.report.#{name}.heading"),
     path,
     { class: "govuk-tabs__tab", role: "tab", aria: { current: (active_tab == name ? "page" : nil) } }
