--- a/app/views/staff/reports/variance.html.haml
+++ b/app/views/staff/reports/variance.html.haml
@@ -14,7 +14,7 @@
 
         .govuk-tabs__panel
           %h2.govuk-heading-l
-            = t("tabs.report.variance")
+            = t("tabs.report.variance.heading")
 
           %p.govuk-body
             This tab shows the variance between forecasted and actual spend in this reporting cycle.
