--- a/app/views/staff/shared/reports/_tabs.html.haml
+++ b/app/views/staff/shared/reports/_tabs.html.haml
@@ -3,7 +3,7 @@
 %ul.govuk-tabs__list{role: "tablist"}
   %li.govuk-tabs__list-item{role: "presentation"}
     %a.govuk-tabs__tab{href: "#current", role: "tab"}
-      = t("tabs.report.current")
+      = t("tabs.report.current.heading")
   %li.govuk-tabs__list-item{role: "presentation"}
     %a.govuk-tabs__tab{href: "#approved", role: "tab"}
-      = t("tabs.report.approved")
+      = t("tabs.report.approved.heading")
