Add body copy to report variance tab
In the last commit we allowed the locales to store the body copy for a
tab, here we use that to store the variance tab copy and to update it to
be explicit that the values include adjustments.

--- a/app/views/staff/reports/variance.html.haml
+++ b/app/views/staff/reports/variance.html.haml
@@ -17,6 +17,6 @@
             = t("tabs.report.variance.heading")
 
           %p.govuk-body
-            This tab shows the variance between forecasted and actual spend in this reporting cycle.
+            = t("tabs.report.variance.body")
 
           = render partial: "staff/shared/reports/table_variance", locals: { activities: @activities, readonly: false }
