--- a/app/views/staff/reports/comments.html.haml
+++ b/app/views/staff/reports/comments.html.haml
@@ -38,7 +38,7 @@
                         = activity.roda_identifier
                     %td.govuk-table__cell= I18n.l(comment.created_at.to_date)
                     %td.govuk-table__cell= comment.comment
-                    - if policy(comment).update?
+                    - if policy([:activity, comment]).update?
                       %td.govuk-table__cell
                         = a11y_action_link(t("default.link.edit"), edit_activity_comment_path(activity, comment), t("table.body.report.comment").downcase)
 
