Rename the comment's `comment` to `body`
This makes more sense and reads better than
`comment.comment`, which crops up a lot in
the code and makes my teeth itch!

--- a/app/views/staff/activities/comments.html.haml
+++ b/app/views/staff/activities/comments.html.haml
@@ -36,7 +36,7 @@
                     %dt.govuk-summary-list__key
                       = Comment.model_name.human
                     %dd.govuk-summary-list__value
-                      = comment.comment
+                      = comment.body
                       - if policy([:activity, comment]).update?
                         %span.govuk-body-s
                           (#{a11y_action_link(t("default.link.edit"), edit_activity_comment_path(@activity, comment))})
