--- a/app/views/staff/adjustments/show.html.haml
+++ b/app/views/staff/adjustments/show.html.haml
@@ -60,5 +60,5 @@
           %dt.govuk-summary-list__key
             = t("summary.headings.adjustment.comment")
           %dd.govuk-summary-list__value
-            = @adjustment.comment.comment
+            = @adjustment.comment.body
 
