Style add new comment as a button
Generally our UI has two scopes, the page and the tab and each scope has
a primary action.

Users interacting with the Activity > comments tab are interesting in
existing comments or add a new comment, so the action should be a
primary button.

--- a/app/views/staff/activities/comments.html.haml
+++ b/app/views/staff/activities/comments.html.haml
@@ -25,7 +25,7 @@
 
           .govuk-body
             - if policy(:comment).create? && @report
-              = a11y_action_link(t("page_content.comment.add"), new_activity_comment_path(@activity, report_id: @report.id))
+              = link_to(t("page_content.comment.add"), new_activity_comment_path(@activity, report_id: @report.id),  class: "govuk-button")
 
           %ul.govuk-list.activity_comments
             - @comments.each do |comment|
