Show the commiment value on the financials tab
When an activity has a commitment value we show it in the Summary on the
Financials page of the activity.

--- a/app/views/staff/activities/financials.html.haml
+++ b/app/views/staff/activities/financials.html.haml
@@ -47,6 +47,10 @@
                   %dd.govuk-summary-list__value
                     = @activity.total_forecasted
 
+          - if @commitment.present?
+            = render partial: "staff/shared/commitment/table",
+              locals: { commitment: @commitment }
+
           - if @activity.fund? && policy(:fund).create?
             = render partial: "staff/shared/activities/budgets",
               locals: { activity: @activity, budget_presenters: @budget_presenters }
