Use the new list of budget financial years
Update the new budget form the use the new list of financial years.

I only added one feature spec here as the Javascript ones are very
expensive (slow!) and this is a low risk change.

--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -19,7 +19,7 @@
     = f.govuk_text_field :providing_organisation_reference
 
 = f.govuk_collection_select :financial_year,
-  list_of_financial_years,
+  list_of_budget_financial_years,
   :id,
   :name,
   options: { selected: f.object.financial_year, prompt: t("form.prompt.budget.financial_year") },
