--- a/app/views/staff/budgets/_form.html.haml
+++ b/app/views/staff/budgets/_form.html.haml
@@ -22,7 +22,7 @@
   list_of_budget_financial_years,
   :id,
   :name,
-  options: { selected: f.object.financial_year, prompt: t("form.prompt.budget.financial_year") },
+  options: { selected: f.object.financial_year.to_i, prompt: t("form.prompt.budget.financial_year"), include_blank: true },
   label: { size: "m", tag: "h2" }
 
 = f.govuk_text_field :value, class: "govuk-input govuk-input--width-10"
