--- a/app/views/staff/activities/financials.html.haml
+++ b/app/views/staff/activities/financials.html.haml
@@ -43,7 +43,7 @@
                     = @activity.total_spend
                 .govuk-summary-list__row
                   %dt.govuk-summary-list__key
-                    Total forecasted spend to date
+                    Total forecasted spend
                   %dd.govuk-summary-list__value
                     = @activity.total_forecasted
 
