Allow users to download legacy report csv
Whilst we are introducing the new report csv we want to offer the old
one to reassure users that any workflows will not be broken. Once they
have confidence in the new export, this work can be rollback.

--- a/app/views/staff/reports/_download.haml
+++ b/app/views/staff/reports/_download.haml
@@ -4,4 +4,6 @@
   %p.govuk-body
     Download a CSV file to review offline. For guidance on reviewing and submitting your report, see the
     = link_to_new_tab " guidance in the help centre", "https://beisodahelp.zendesk.com/hc/en-gb/articles/1500005604902-Review-and-Submit-your-Data"
-  = link_to t("action.report.download.button"), report_path(report_presenter, format: :csv), class: "govuk-button govuk-button--secondary"
+  .govuk-button-group
+    = link_to t("action.report.download.button"), report_path(report_presenter, format: :csv), class: "govuk-button govuk-button--secondary"
+    = link_to "Download report as legacy CSV file", report_path(report_presenter, format: :csv, legacy: true), class: "govuk-link"
