--- a/app/views/staff/reports/actuals.html.haml
+++ b/app/views/staff/reports/actuals.html.haml
@@ -20,23 +20,10 @@
             = t("tabs.actuals.copy")
 
           - if policy(@report_presenter).upload?
-            %h3.govuk-heading-m
-              = t("tabs.actuals.providing.heading")
+            = render partial: "staff/reports/actuals_upload"
 
-            %p.govuk-body
-              = t("tabs.actuals.providing.copy")
-
-            %h3.govuk-heading-s
-              = t("tabs.actuals.upload.heading")
-
-            = t("tabs.actuals.upload.copy_html")
-
-            .govuk-inset-text
-              = t("tabs.actuals.upload.warning")
-
-            .govuk-button-group
-              = link_to t("page_content.actuals.button.download_template"), report_actual_upload_path(@report_presenter, format: :csv), class: "govuk-button govuk-button--secondary"
-              = link_to t("page_content.actuals.button.upload"), new_report_actual_upload_path(@report_presenter), class: "govuk-button govuk-button"
+          - if policy(@report_presenter).upload_history?
+            = render partial: "staff/reports/actuals_upload_history"
 
             %hr.govuk-section-break.govuk-section-break--l.govuk-section-break--visible
 
