Activity summary view users BEIS locale strings
We are slowing refactor where and what we use to describe the various
attributes in use throughout the service.

With this change the Activity summary view and report csv file share the
same locales.

Here the Activity summary view is updated to use the
`activerecord.attributes.activity` namespace whenever possible. Not
everything is an activerecord attributes so I have had to use my best
judgement when to include a key and when to not.

--- a/app/views/staff/shared/activities/_activity_summary.html.haml
+++ b/app/views/staff/shared/activities/_activity_summary.html.haml
@@ -2,7 +2,7 @@
   - if current_user.service_owner?
     .govuk-summary-list__row
       %dt.govuk-summary-list__key
-        = t("summary.label.activity.delivery_partner_organisation")
+        = t("activerecord.attributes.activity.delivery_partner_organisation")
       %dd.govuk-summary-list__value
         = activity_presenter.extending_organisation.name
 
@@ -14,18 +14,18 @@
 
   .govuk-summary-list__row.programme_status
     %dt.govuk-summary-list__key
-      = t("summary.label.activity.programme_status")
+      = t("activerecord.attributes.activity.programme_status")
     %dd.govuk-summary-list__value
       = activity_presenter.programme_status
 
   .govuk-summary-list__row.roda_identifier
     %dt.govuk-summary-list__key
-      = t("summary.label.activity.roda_identifier")
+      = t("activerecord.attributes.activity.roda_identifier")
     %dd.govuk-summary-list__value
       = activity_presenter.roda_identifier
 
   .govuk-summary-list__row.identifier
     %dt.govuk-summary-list__key
-      = t("summary.label.activity.delivery_partner_identifier")
+      = t("activerecord.attributes.activity.delivery_partner_identifier")
     %dd.govuk-summary-list__value
       = activity_presenter.delivery_partner_identifier
