Add a warning to the actual upload page
Some users have duplicated their actual spend data during reporting due
to us not being clear that the upload appends to the data already in the
application as opposed to replacing it.

As a first step towards fixing this issue, we add a strong warning to
users that the upload will append data.

The Linked guidance should be updated along with this change.

--- a/app/views/staff/actual_uploads/new.html.haml
+++ b/app/views/staff/actual_uploads/new.html.haml
@@ -8,6 +8,8 @@
 
       = t("page_content.actuals.upload.copy_html", report_actuals_template_path: report_actual_upload_path(@report_presenter, format: :csv))
 
+      = t("page_content.actuals.upload.warning_html")
+
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       - if policy(@report_presenter).upload?
