DP adds and removes OrgParticipations for implementing orgs thru UI
Rather than adding / editing individual (often duplicated)
`ImplementingOrganisation` entities, a DP now adds or
removes associations to Organisations using the new the
'join'entity `OrgParticipation`.

We show a dropdown list of Organisations of the following
organisation types:

[15 21 24 71 80 90]

These are the distinct `ImplementingOrganisation#organisation_type`
values which have been migrated.

There are 516 of these organisations (`Organisation.integrating.count`)
which makes for a long list, but acceptable for a first cut,
I think?

In a later PR we will drop the `implementing_organisations`
table, once we are sure we've migrated all of its rows to
the new `org_participations` table.

--- a/app/views/staff/implementing_organisations/new.html.haml
+++ b/app/views/staff/implementing_organisations/new.html.haml
@@ -6,13 +6,16 @@
       %h1.govuk-heading-xl
         = t("page_title.activity.implementing_organisation.new")
 
-      = form_with model: @implementing_organisation, url: activity_implementing_organisations_path(@activity) do |f|
+      = form_with scope: :implementing_organisation, model: @implementing_organisation, url: activity_implementing_organisations_path(@activity) do |f|
         = f.govuk_error_summary
         = f.hidden_field :activity_id, value: @activity.id
-        = f.govuk_text_field :name
-        = f.govuk_collection_select :organisation_type,
-                     organisation_type_options,
-                     :code,
-                     :name
-        = f.govuk_text_field :reference
+        = f.govuk_collection_select :organisation_id,
+                     @implementing_organisations,
+                     :id,
+                     :name,
+                     label: { text: t("form.label.implementing_organisation"), tag: :p, size: 'm' }
         = f.govuk_submit t("default.button.submit")
+
+      .govuk-inset-text
+        = t("form.guidance_html", link: support_email_link)
+
