Implement 'export in progress' template
We reword call-to-action in the UI to 'Request' rather than
'Download' to describe the action more accurately.

--- a/app/views/staff/exports/export_in_progress.html.haml
+++ b/app/views/staff/exports/export_in_progress.html.haml
@@ -5,3 +5,5 @@
     .govuk-grid-column-two-thirds
       %h1.govuk-heading-xl
         Your export is being prepared
+      %p.govuk-body
+        = @message
