--- a/app/views/staff/activity_uploads/new.html.haml
+++ b/app/views/staff/activity_uploads/new.html.haml
@@ -34,4 +34,4 @@
 
   .govuk-grid-row
     .govuk-grid-column-two-thirds
-      = link_to "Back to report", report_path(@report_presenter)
+      %p.govuk-body= link_to "Back to report", report_path(@report_presenter)
